# E2-OpenPlugins

./: Makefile.am  configure.ac
Extensions/: Makefile.am
Extensions/AntiLogo/: Makefile.am
Extensions/AutoBackup/: Makefile.am  backup.cfg  plugin.py  settings-backup.sh  ui.py
Extensions/Bitrate/: Makefile.am  plugin.py
Extensions/BuienRadar/: Makefile.am
Extensions/NFSServer/: Makefile.am
Extensions/NewsReader/: Makefile.am
Extensions/NewsReader/data/: Makefile.am
Extensions/PPanel/: Makefile.am  ppanel.py  url.py
Extensions/PPanel/data/: Makefile.am  PPanel_tutorial.xml
Extensions/RemoteControlChannel/: Makefile.am  plugin.py
Extensions/ScreenPosition/: Makefile.am  plugin.py
Extensions/SnmpAgent/: Makefile.am  emm.py
Extensions/StreamInterface/: Makefile.am  plugin.py
PLi/: Makefile.am
PLi/AntiLogo/: Makefile.am  plugin.py
PLi/AutoBackup/: Makefile.am  backup.cfg  plugin.py  settings-backup.sh  ui.py
PLi/Bitrate/: Makefile.am
PLi/Bitrate/bitratetool/: bitrate.cpp
PLi/BuienRadar/: Makefile.am  plugin.py
PLi/LipSync/: Makefile.am  plugin.py
PLi/MountManager/: Makefile.am  MountManager.py  plugin.py
PLi/NFSServer/: Makefile.am  plugin.py
PLi/NewsReader/: Makefile.am  plugin.py
PLi/NewsReader/data/: Makefile.am  feeds.xml.default
PLi/PPanel/: Makefile.am  plugin.py  ppanel.py
PLi/RemoteControlChannel/: Makefile.am
PLi/ScreenPosition/: Makefile.am
PLi/SnmpAgent/: Makefile.am  bitrate.py  plugin.py
PLi/SoftcamConfig/: Makefile.am  Sc.py  camcontrol.py
PLi/SoftcamSetup/: Makefile.am  Sc.py  plimgr.py  plugin.py  softcamsetup.py
PLi/StreamInterface/: Makefile.am  plugin.py
PLi/UShare/: plugin.py
SystemPlugins/: Makefile.am
SystemPlugins/FanMonitor/: Makefile.am  plugin.py
SystemPlugins/FanMonitor/Converters/: FanInfo.py  Makefile.am  TemperatureInfo.py
SystemPlugins/FanMonitor/Sources/: FanStatus.py  Makefile.am  TemperatureStatus.py
SystemPlugins/FanMonitor/data/: Makefile.am
SystemPlugins/FanMonitor/fancontrol/: Makefile.am  fancontrol.cpp
SystemPlugins/FanMonitor/fancontrol/script/: Makefile.am  fancontrol
UPnP/: Makefile.am
UPnP/UShare/: Makefile.am
