AC_INIT(plugins,0.0.1)
AM_INIT_AUTOMAKE(plugins,0.0.1)

TUXBOX_APPS_DIRECTORY

AM_PATH_PYTHON()
AC_PYTHON_DEVEL

AC_PROG_CXX

AC_OUTPUT([
Makefile
PLi/Makefile
PLi/PPanel/Makefile
PLi/SoftcamSetup/Makefile
PLi/LipSync/Makefile
PLi/NFSServer/Makefile
PLi/Bitrate/Makefile
PLi/Bitrate/bitratetool/Makefile
PLi/MountManager/Makefile
PLi/NewsReader/Makefile
PLi/RemoteControlChannel/Makefile
PLi/UShare/Makefile
PLi/ScreenPosition/Makefile
PLi/StreamInterface/Makefile
PLi/SnmpAgent/Makefile
])
